--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../style.css" />
+   <!-- <link href="/src/style.css" type="text/css" rel="stylesheet">-->
     <meta charset="utf-8" />
     <title>React App</title>
   </head>
